# backend/internal/adapters/handler/question_handler.go
@@ -55,8 +55,8 @@ func (h *QuestionHandler) CreateQuestion(c echo.Context) error {
 // @Tags        Admin - Bank Soal
 // @Security    BearerAuth
 // @Produce     json
-// @Param       page   query     int  false  "Halaman"
-// @Param       limit  query     int  false  "Limit"
+// @Param       page   query     int  false  "Halaman" default(1)
+// @Param       limit  query     int  false  "Limit" default(10)
 // @Success     200    {object}  response.PaginatedResponse{data=[]domain.Question}
 // @Router      /admin/questions [get]
 func (h *QuestionHandler) ListQuestions(c echo.Context) error {
